bug 208869: Setting innerHTML with textarea can isnert an extra newline. This patch makes textarea be treated as a normal container outside CNavDTD (which takes over its first-newline removal duties). r=sicking sr=bzbarksy a=shaver